css correction mobile-1600 media

--- a/public/styles.css
+++ b/public/styles.css
@@ -40,12 +40,13 @@ nav > ul {
   display: block;
   width: 100%;
   height: 100px;
-  padding: 10px;
+  padding: 10px 10px;
   margin: 0px auto;
   text-transform: uppercase;
 }
 
 ul > #navLogo {
+  padding: 0px;
   font-size: 20px;
   font-weight: 900;
 }
@@ -56,9 +57,9 @@ span {
 
 ul > li {
   display: inline-block;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 600;
-  padding: 8px;
+  padding: 6px;
   margin: 0 auto;
 }
 
@@ -195,7 +196,7 @@ blockquote {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 15px;
+  padding: 15px 10px;
   margin: 0px auto;
 }
 
@@ -239,7 +240,7 @@ blockquote {
 }
 
 .priceList > .image-box > img {
-  width: 75%;
+  width: 78%;
   transform: rotate(270deg);
   margin: -30px;
   box-shadow: 0 4px 8px 0 rgba(1, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 3, 0, 0.19);
@@ -269,7 +270,7 @@ blockquote {
   font-size: 16px;
   letter-spacing: 1px;
   margin: 0px;
-  padding: 3px;
+  padding: 3px 0;
   text-align: right;
 }
 
@@ -640,6 +641,7 @@ hr {
   }
 
   .priceList > .image-box > img {
+    position: absolute;
     width: 0%;
   }
 
